--- a/api/src/app/appsettings.Development.json
+++ b/api/src/app/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=EventsDb.db"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
